Fixed various warnings.